--- a/datos.html
+++ b/datos.html
@@ -36,6 +36,9 @@
     <br>
     <br>
     <input name="contraseña" type="text" placeholder="ingrese la contraseña">
+    <br>
+    <br>
+    <button type="submit">regresar</button>
    </form>
    </center>
     
